[gd_scene load_steps=24 format=3 uid="uid://6gwcmgg178wt"]

[ext_resource type="Script" path="res://scripts/options_menu.gd" id="1_cyuar"]
[ext_resource type="PackedScene" uid="uid://ds3ncxon6jclc" path="res://scenes/options scenes/settings_tab_container.tscn" id="3_0w8wj"]
[ext_resource type="Texture2D" uid="uid://1xifv6mb2t7r" path="res://Real Assets/fonts/animated texts/ExitButtonGif.png" id="3_5dde6"]
[ext_resource type="FontFile" uid="uid://bctwgvrqy57qi" path="res://assets/HOTLINE MIAMI STOLEN ASSETS/fonts/Theorevil.otf" id="3_wvhyl"]
[ext_resource type="Texture2D" uid="uid://ds403b5rmxdja" path="res://Real Assets/fonts/animated texts/OptionsButtonGif.png" id="5_2hx15"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ok8j3"]
atlas = ExtResource("3_5dde6")
region = Rect2(0, 0, 404, 166)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ukhj"]
atlas = ExtResource("3_5dde6")
region = Rect2(404, 0, 404, 166)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qe8n"]
atlas = ExtResource("3_5dde6")
region = Rect2(808, 0, 404, 166)

[sub_resource type="AtlasTexture" id="AtlasTexture_iju5q"]
atlas = ExtResource("3_5dde6")
region = Rect2(1212, 0, 404, 166)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hy20"]
atlas = ExtResource("3_5dde6")
region = Rect2(808, 0, 404, 166)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcxeh"]
atlas = ExtResource("3_5dde6")
region = Rect2(0, 0, 404, 166)

[sub_resource type="AtlasTexture" id="AtlasTexture_01ac2"]
atlas = ExtResource("3_5dde6")
region = Rect2(1212, 0, 404, 166)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx4x7"]
atlas = ExtResource("3_5dde6")
region = Rect2(404, 0, 404, 166)

[sub_resource type="SpriteFrames" id="SpriteFrames_us0ci"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ok8j3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ukhj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qe8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iju5q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hy20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcxeh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_01ac2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx4x7")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="Gradient" id="Gradient_m1h8h"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vxkf7"]
gradient = SubResource("Gradient_m1h8h")
fill = 1
fill_from = Vector2(0.517094, 0.517094)
fill_to = Vector2(0.846154, 0.209402)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rmgn"]
atlas = ExtResource("5_2hx15")
region = Rect2(0, 0, 628, 244)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0hb6"]
atlas = ExtResource("5_2hx15")
region = Rect2(628, 0, 628, 244)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8imq"]
atlas = ExtResource("5_2hx15")
region = Rect2(1256, 0, 628, 244)

[sub_resource type="AtlasTexture" id="AtlasTexture_tg5er"]
atlas = ExtResource("5_2hx15")
region = Rect2(1884, 0, 628, 244)

[sub_resource type="SpriteFrames" id="SpriteFrames_db8kn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rmgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0hb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8imq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tg5er")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="Gradient" id="Gradient_lsd8s"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ci2ux"]
gradient = SubResource("Gradient_lsd8s")
fill = 1
fill_from = Vector2(0.512821, 0.521368)
fill_to = Vector2(0.811966, 0.149573)

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.998174, 1.0063)
script = ExtResource("1_cyuar")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 59
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 59
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 56

[node name="SettingsTabContainer" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_0w8wj")]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 187
theme_override_constants/margin_top = 59

[node name="ExitButton" type="Button" parent="MarginContainer2"]
custom_minimum_size = Vector2(140, 32)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 0.745098, 0.709804, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.988235, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0.745098, 0.709804, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("3_wvhyl")
theme_override_font_sizes/font_size = 48
text = "
"

[node name="ExitTextAnimation" type="AnimatedSprite2D" parent="MarginContainer2/ExitButton"]
self_modulate = Color(0, 0, 0, 1)
position = Vector2(70.0018, 34.712)
scale = Vector2(0.221287, 0.256627)
sprite_frames = SubResource("SpriteFrames_us0ci")

[node name="ExitBGLight" type="PointLight2D" parent="MarginContainer2/ExitButton"]
position = Vector2(67.0018, 30.212)
scale = Vector2(2.28125, 1.60938)
texture = SubResource("GradientTexture2D_vxkf7")

[node name="OptionsTitle" type="AnimatedSprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(584.066, 163.967)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_db8kn")

[node name="OptionsTitleLight" type="PointLight2D" parent="OptionsTitle"]
position = Vector2(-5.00897, -14.9061)
scale = Vector2(11.0514, 3.69547)
texture = SubResource("GradientTexture2D_ci2ux")

[connection signal="button_up" from="MarginContainer2/ExitButton" to="." method="_on_exit_button_button_up"]
[connection signal="mouse_entered" from="MarginContainer2/ExitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer2/ExitButton" to="." method="_on_exit_button_mouse_exited"]
